--- a/produkt8.html
+++ b/produkt8.html
@@ -13,7 +13,7 @@
 <header>
     <div class="bg-dark navbar-dark p-3">
         <div class="navbar navbar-dark bg-dark shadow-sm d-flex container" style="padding: 0rem;">
-            <a href="/index.html" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
+            <a href="index.html" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
                 <strong>WoofWoof</strong>
             </a>
             <ul class="d-flex text-warning list-unstyled" style="margin: 0rem;">
@@ -67,12 +67,12 @@
 <main class="container">
     <div class="row mt-5">
         <div class="col-md-5">
-            <img src="Images/K4.jpg" alt="BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN" style="width: 20rem; height: 30rem;">
+            <img src="Images/K2.jpg" alt="BALENÍ 85G – PRO MALÁ PLEMENA" style="width: 20rem; height: 30rem;">
         </div>
         <div class="col-md-7">
             <div class="row row-cols-1">
                 <div class="col">
-                    <p class="fw-bolder h2 text-center" style="color: #0d6efd;">BALENÍ 140G – ŠTĚŇATA A PSY STŘEDNÍCH PLEMEN</p>
+                    <p class="fw-bolder h2 text-center" style="color: #0d6efd;">BALENÍ 85G – PRO MALÁ PLEMENA</p>
                 </div>
                 <div class="col mt-2">
                     <p class="h6 lead lh-sm font-monospace">Kompletní suché prémiové krmivo pro dospělé psy všech plemen s hypoalergenní recepturou je od značky Fitmin. Správný poměr omega 3 a 6 mastných kyselin zajistí zdravou kůži a srst, jehněčí maso je šetrné k zažívání.</p>
@@ -85,7 +85,7 @@
                 <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
                     <div>
 
-                        <a href="/src/produkt7.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                        <a href="/src/produkt8.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <line x1="21" y1="17" x2="3" y2="17"></line>
@@ -97,7 +97,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="/src/produkt7.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                        <a href="/src/produkt8.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <circle cx="6" cy="19" r="2"></circle>
@@ -110,7 +110,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="/src/produkt7.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
+                        <a href="/src/produkt8.html" role="button" class="btn btn-lg btn-outline-secondary rounded-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <path d="M13 19l-1 1l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 0 1 8.003 5.996"></path>
@@ -125,7 +125,7 @@
                 <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
                     <div>
 
-                        <a href="/index.html" role="button" class="btn btn-lg btn-outline-danger rounded-5 my-5">
+                        <a href="index.html" role="button" class="btn btn-lg btn-outline-danger rounded-5 my-5">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <line x1="21" y1="17" x2="3" y2="17"></line>
