--- a/onas.html
+++ b/onas.html
@@ -9,11 +9,11 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
-<body>
+<body class="min-vh-100 d-grid">
 <header>
     <div class="bg-dark navbar-dark p-3">
         <div class="navbar navbar-dark bg-dark shadow-sm d-flex container" style="padding: 0rem;">
-            <a href="/index.html" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
+            <a href="index.html" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
                 <strong>WoofWoof</strong>
             </a>
             <ul class="d-flex text-warning list-unstyled" style="margin: 0rem;">
@@ -64,8 +64,8 @@
         </div>
     </div>
 </header>
-<main class="container">
-    <div class="row mt-5">
+<main class="container center">
+    <div class="row">
         <div class="text-center">
             <h1>Jsme skupina studentů, která musí dělat projekt na client side :) </h1>
             <br>
@@ -80,7 +80,7 @@
         </div>
 </main>
 
-<div class="container">
+<div class="container fixed-bottom">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-2 mb-2">
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Domů</a></li>
@@ -92,7 +92,7 @@
         <p class="text-center text-muted">© 2022 WoofWoof, Inc</p>
     </footer>
 </div>
-<footer class="text-muted py-2 bg-dark">
+<footer class="text-muted py-2 bg-dark fixed-bottom" style="max-height: 44px;">
     <div class="container">
         <p class="text-center mb-1">
             <a href="#">Vrátit se na začátek</a>
