--- a/produkt10.html
+++ b/produkt10.html
@@ -13,7 +13,7 @@
 <header>
     <div class="bg-dark navbar-dark p-3">
         <div class="navbar navbar-dark bg-dark shadow-sm d-flex container" style="padding: 0rem;">
-            <a href="/index.html" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
+            <a href="index.html" class="text-decoration-none fw-bold h2" style="margin: 0rem;">
                 <strong>WoofWoof</strong>
             </a>
             <ul class="d-flex text-warning list-unstyled" style="margin: 0rem;">
@@ -125,7 +125,7 @@
                 <div class="d-flex flex-row-reverse mt-2 gap-2 justify-content-center">
                     <div>
 
-                        <a href="/index.html" role="button" class="btn btn-lg btn-outline-danger rounded-5 my-5">
+                        <a href="index.html" role="button" class="btn btn-lg btn-outline-danger rounded-5 my-5">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <line x1="21" y1="17" x2="3" y2="17"></line>
